<resources>
    <string name="app_name">SwapcardArtists</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <string name="not_available">N/A</string>
    <string name="label_name">Name:</string>
    <string name="label_description">Description:</string>
    <string name="label_country">Country:</string>
    <string name="label_type">Type:</string>
    <string name="label_rating_value">Rating:</string>
    <string name="label_votes_count">Votes:</string>
    <string name="details">Details</string>
    <string name="artist_add_favorites_confirmation">Added to favorites</string>
    <string name="artist_remove_favorites_confirmation">Removed from favorites</string>
    <string name="search_query_empty">Search data must not be empty</string>
</resources>