<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        app:layout_constraintStart_toEndOf="@id/startGl"
        app:layout_constraintTop_toBottomOf="@id/topGl"/>

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/label_name"
        app:layout_constraintTop_toBottomOf="@id/topGl"/>

    <TextView
        android:id="@+id/label_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_description"
        app:layout_constraintStart_toEndOf="@id/startGl"
        app:layout_constraintTop_toBottomOf="@id/label_name"/>

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/label_description"
        app:layout_constraintTop_toBottomOf="@id/text_name"/>

    <TextView
        android:id="@+id/label_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_country"
        app:layout_constraintStart_toEndOf="@id/startGl"
        app:layout_constraintTop_toBottomOf="@id/label_description"/>

    <TextView
        android:id="@+id/text_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/label_country"
        app:layout_constraintTop_toBottomOf="@id/text_description"/>

    <TextView
        android:id="@+id/label_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_type"
        app:layout_constraintStart_toEndOf="@id/startGl"
        app:layout_constraintTop_toBottomOf="@id/label_country"/>

    <TextView
        android:id="@+id/text_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/label_type"
        app:layout_constraintTop_toBottomOf="@id/text_country"/>

    <TextView
        android:id="@+id/label_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_rating_value"
        app:layout_constraintStart_toEndOf="@id/startGl"
        app:layout_constraintTop_toBottomOf="@id/label_type"/>

    <TextView
        android:id="@+id/text_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/label_rating"
        app:layout_constraintTop_toBottomOf="@id/text_type"/>

    <TextView
        android:id="@+id/label_votes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_votes_count"
        app:layout_constraintStart_toEndOf="@id/startGl"
        app:layout_constraintTop_toBottomOf="@id/label_rating"/>

    <TextView
        android:id="@+id/text_votes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/label_votes"
        app:layout_constraintTop_toBottomOf="@id/text_rating"/>




    <!--    <TextView-->
<!--        android:id="@+id/text_details"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>